# budget

./: .gitignore  CMakeLists.txt  README.md  test.db  transactions.db
SQLite/: test.db  transactions.db
include/: BudgetManager.hpp  Category.hpp  DatabaseManager.hpp  Transaction.hpp  UI.hpp
src/: BudgetManager.cpp  DatabaseManager.cpp  UI.cpp  main.cpp
tests/: test.cpp
